Correcting photo alignment in the gallery 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,9 +246,10 @@ td {
   width: 100%;
   background-color: aqua;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 #photos img {
